--- a/cardflip/style.css
+++ b/cardflip/style.css
@@ -1,3 +1,16 @@
+p {
+  text-align: center;
+  font-size: 50px;
+  font-weight: bold;
+  font-style: italic;
+  font-family: cursive;
+  color: red;
+}
+
+img {
+  height: 400px;
+  width: 500px;
+}
 .container{
   width:400px;
   height:280px;
@@ -23,10 +36,15 @@
   display: block;
   box-sizing: border-box;
   padding: 20px;
+}
+/* .face.back {
+  display: block;
+  box-sizing: border-box;
+  padding: 20px;
   color: white;
   text-align: left;
   background-color: #333;
-}
+} */
 
 .container{
   perspective: 800px;
@@ -38,6 +56,7 @@
 .card:hover .front{
   transform: rotateY(-180deg);
 }
+
 
 .card:hover .back {
  transform: rotateY(0deg);
