--- a/balldodge_game/style.css
+++ b/balldodge_game/style.css
@@ -1,3 +1,9 @@
 p {
   color: red;
 }
+canvas {
+    border:10px solid black;
+    background-color: black;
+    height: 500px;
+    width:700px;
+}
