--- a/choices/style.css
+++ b/choices/style.css
@@ -1,7 +1,14 @@
 html {
-  background: url(img/pic1.jpg) no-repeat center center fixed; 
+  background: url(img/pic4.jpeg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+/* html {
+  background: url(img/pic1.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} */
