display canvas in the center

--- a/choices/style.css
+++ b/choices/style.css
@@ -1,5 +1,5 @@
 html {
-  background: url(img/pic4.jpeg) no-repeat center center fixed; 
+  background: url(img/pic4.jpeg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -12,3 +12,28 @@ html {
   -o-background-size: cover;
   background-size: cover;
 } */
+
+canvas {
+  /* padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: block; */
+
+  /* padding: 0;
+    margin: auto;
+    display: block; */
+
+    padding: 0;
+  margin: auto;
+  display: block;
+  width: 800px;
+  height: 600px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  border: 2px solid blue;
+}
