--- a/choices/style.css
+++ b/choices/style.css
@@ -13,16 +13,14 @@ html {
   background-size: cover;
 } */
 
-canvas {
-  /* padding-left: 0;
-  padding-right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  display: block; */
 
-  /* padding: 0;
-    margin: auto;
-    display: block; */
+h1 {
+  color: blue;
+  text-align: center;
+}
+
+canvas {
+
 
     padding: 0;
   margin: auto;
