--- a/canvas_exercises/style.css
+++ b/canvas_exercises/style.css
@@ -1,3 +1,17 @@
 canvas {
-  border: 2px solid blue;
+
+
+  padding: 0;
+  margin: auto;
+  display: block;
+  width: 800px;
+  height: 600px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: #00ffff;
+  background-color: black;
+  border: 10px solid blue;
 }
