make a rectangle clickable

--- a/canvas_exercises/style.css
+++ b/canvas_exercises/style.css
@@ -1,4 +1,4 @@
-canvas {
+/* canvas {
 
 
   padding: 0;
@@ -14,4 +14,4 @@ canvas {
   color: #00ffff;
   background-color: black;
   border: 10px solid blue;
-}
+} */
